# CI_Managment_API

./: .gitignore  Cargo.toml  README.md  Rocket.toml  transfer.sh
.sqlx/: query-15be2b0f324fd592b4b1c5f73b1b64f5b09d3e113a0944d8346d7a8f7e3f0c74.json  query-2f7ca9b68853947822851ed7da39475aa61a770c41ee29cd0b3a00ba783aa724.json  query-4347e118e08ee7f696be2c50ad5ac9e2099c46b56e1b7deb35aa06568eb93cca.json  query-46a98f4fac11057c886e4394b826d23150b81ebd69de726ea4e64633a9d2883f.json  query-52b2af3aac9f3b98ae402d739480609619dcf4437c54ee41b05a203d2d9c4d9b.json  query-5eb46391a79e3c2983188387816e77a70686aefd430274946aaacb66a28f94a0.json  query-b5fd929a263e6eda60167f9e195a04674b5219cc214003dc5061c97f9c3b359a.json  query-c21ac7e940fc88da654dbc271dc93361f227bab9a084b4f1254e8b74f23d075c.json  query-c595340c32ab2051c9eadc1046e3e92b72d668f6a4aa463ef2e82fdc1a40a5df.json  query-dfab319c4fcb20b1c549e47cf633c7cf578091ef1718505773ff7b0080ead6dd.json
db/: runner-managment-api.sqlite  table_definitions.sql
migrations/: 20240725080658_runners.sql
servers-setup-scripts/managment/: runner-managment.service  update.service  update.timer
servers-setup-scripts/runner/: debug_launch_actions-runner.sh
servers-setup-scripts/runner/first_stage/: exec.sh  setup_first_stage.service
servers-setup-scripts/runner/second_stage/: claim_hardware.sh  exec.sh  reset_after_idle.service  runner_launch.sh  runner_reset.sh  setup_second_stage.service
src/: db.rs  hardware.rs  main.rs  reset_task.rs  runners.rs  timestamp.rs  vm.rs
