[package]
name = "runner-managment-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.*", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
#sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]


[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

